# pyVegaFEM

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  setup.py
.github/workflows/: conda.yml  format.yml  pip.yml  wheels.yml
VegaFEM/: CMakeLists.txt
VegaFEM/ElasticForceFEM/: CMakeLists.txt  elasticForceFEM.cpp  elasticForceFEM.h
VegaFEM/minivector/: CMakeLists.txt
conda.recipe/: meta.yaml
docs/: Makefile  conf.py  index.rst  make.bat  pyvegafem.rst
python/: CMakeLists.txt  main.cpp  pyElasticForceFEM.cpp  pyElasticForceFEM.h
tests/: test.py
